# fastapi-clerk-middleware

./: .bumpversion.cfg  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  ruff.toml
.github/workflows/: publish.yml
fastapi_clerk_auth/: __init__.py
scripts/: formatter.sh  linter.sh  version_major.sh  version_minor.sh  version_patch.sh
